--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,9 @@ remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
 ]
 
+[invariant]
+runs = 200
+depth = 200
+fail_on_revert = false
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/crates/config
